# PicoGUIpng

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.kiro/skills/: build.md
.kiro/specs/multi-platform-fatfs/: .config.kiro  design.md  requirements.md  tasks.md
Toolchain/ESP32/: Setup.sh
Toolchain/RP2040/: Setup.sh
src/: Sample.c  main.cpp  pos-executable-picoguipng.cmake  pos-executable.cmake  pre-executable.cmake  sample.c
src/Dependency/: fatfs.ffconf_patch.cmake  zlibstatic.cmake
src/helper/: fileHelper.cpp  pngHelper.cpp
src/lib/Driver/GC9A01/: Driver.c
src/lib/GUI/: GUI_Paint.c  GUI_Paint.h
src/lib/Helper/: FileHelper.c  PNGHelper.c  fileHelper.c  pngHelper.c
src/lib/LCD/: LCD_1in28.c  LCD_1in28.h
src/lib/Platform/ESP32/: CMakeLists.txt  DiskIO.c  HAL.c  HALConfig.h  Platform.c  PreExecutable.cmake  SDHWConfig.h  diskio.c  pos-executable.cmake  rtc.h  sd_config.h  sd_hw_config.h
src/lib/Platform/RP2040/: DiskIO.c  HAL.c  Platform.c  PostExecutable.cmake  PreExecutable.cmake  SDHWConfig.h  diskio.c  platform_config.h  pos-executable.cmake  pre-executable.cmake  rtc.h  sd_config.h  sd_hw_config.h
tests/: CMakeLists.txt  test_diskio_property1.c  test_diskio_property2  test_diskio_property2.c  test_diskio_property3.c  test_diskio_property4.c  test_diskio_property5.c  test_esp32_diskio.c  test_filehelper.c
